--- a/Notebook.BusinessLogic/Notebook.BusinessLogic.csproj
+++ b/Notebook.BusinessLogic/Notebook.BusinessLogic.csproj
@@ -1,19 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Notebook.BusinessLogic\Notebook.BusinessLogic.csproj" />
-    <ProjectReference Include="..\Notebook.Mapper\Notebook.Mapper.csproj" />
+    <ProjectReference Include="..\Notebook.Common\Notebook.Common.csproj" />
     <ProjectReference Include="..\Notebook.Models\Notebook.Models.csproj" />
   </ItemGroup>
 
